force-app/main/default/objects/K_Line__c/K_Line__c.object-meta.xml
<CustomObject>
    <label>日K线</label>
    <nameField>
        <displayFormat>KL-{0000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>