force-app/main/default/objects/K_Line__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <label>收盘价</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>