force-app/main/default/objects/K_Line__c/fields/Gain__c.field-meta.xml
<CustomField>
    <fullName>Gain__c</fullName>
    <label>涨幅</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>