force-app/main/default/objects/K_Line__c/fields/Highest__c.field-meta.xml
<CustomField>
    <fullName>Highest__c</fullName>
    <label>最高价</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>