force-app/main/default/objects/K_Line__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <label>最低价</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>