force-app/main/default/objects/K_Line__c/fields/Opening__c.field-meta.xml
<CustomField>
    <fullName>Opening__c</fullName>
    <label>开盘价</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>