force-app/main/default/objects/K_Line__c/fields/Present__c.field-meta.xml
<CustomField>
    <fullName>Present__c</fullName>
    <label>最新价</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>