force-app/main/default/objects/K_Line__c/fields/Profit_And_Loss__c.field-meta.xml
<CustomField>
    <fullName>Profit_And_Loss__c</fullName>
    <formula>(Present__c  -  Stock_Name__r.Purchase__c) *  Stock_Name__r.Stock_Number__c</formula>
    <label>当日盈亏</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>