force-app/main/default/objects/K_Line__c/fields/Stock_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_Name__c</fullName>
    <label>Stock Name</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipName>K_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>