force-app/main/default/objects/K_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stock_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Opening__c</columns>
    <columns>Closing__c</columns>
    <columns>Highest__c</columns>
    <columns>Minimum__c</columns>
    <columns>Present__c</columns>
    <columns>Gain__c</columns>
    <columns>Profit_And_Loss__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>